# prodigy-pdf-image

./: README.md  setup.cfg  setup.py
prodigy_pdf_img/: __init__.py
tests/: test_basics.py
