[metadata]
version = 0.2.0
description = Recipes for PDF and image annotation
url = https://github.com/tchuitcheu/prodigy-pdf-image
author = Willy and Explosion
author_email = tchuitcheuwillycarlos@gmail.com

[options]
zip_safe = true
python_requires = >=3.8
install_requires =
    pypdfium2==4.20.0
    Pillow==9.4.0
    pytesseract==0.3.10
    requests==2.28.1

[options.entry_points]
prodigy_recipes =
    pdf.image.manual = prodigy_pdf_img:pdf_image_manual

[bdist_wheel]
universal = true

[sdist]
formats = gztar
